# atomic_websocket

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TESTING.md
make_bebop/: Cargo.toml
make_bebop/schemas/: schema.bop
make_bebop/src/: main.rs
src/: lib.rs
src/helpers/: builder.rs  client_sender.rs  common.rs  error.rs  get_internal_websocket.rs  get_outer_websocket.rs  get_websocket.rs  internal_client.rs  internal_server.rs  metrics.rs  middleware.rs  mod.rs  retry.rs  scan_manager.rs  server_sender.rs  types.rs
src/helpers/traits/: atomic.rs  connection_state.rs  date_time.rs  ip.rs  mod.rs  ping.rs
test/: Cargo.toml
test/src/: log_config.yml  main.rs
test_client/: Cargo.toml
test_client/src/: log_config.yml  main.rs
test_server/: Cargo.toml
test_server/src/: main.rs
tests/: client_server_test.rs  feature_test.rs  fixed_ip_test.rs  message_test.rs  reconnection_downtime_test.rs  reconnection_test.rs  stress_blocking_test.rs
tests/common/: mod.rs
