[package]
name = "atomic_websocket"
version = "0.6.33"
authors = ["hsng95@gmail.com"]
description = "High level Websocket util library from tokio-tungstenite"
homepage = "https://github.com/rabbitson87/atomic_websocket"
repository = "https://github.com/rabbitson87/atomic_websocket"
keywords = ["websocket", "client", "server"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.77"

[dependencies]
tokio = { version = "1.44.2", default-features = false, features = [
    "sync",
    "macros",
    "time",
    "rt-multi-thread",
] }
async-trait = "0.1.88"
native_db = "0.8.1"
native_model = "0.4.20"
tokio-tungstenite = "0.26.2"
nanoid = "0.4.0"
futures-util = "0.3.31"

bebop = "3.1.3"
chrono = { version = "0.4.40", default-features = false, features = ["clock"] }
serde = { version = "1.0.219", features = ["derive"] }

rustls = { version = "0.23.26", features = [
    "ring",
], default-features = false, optional = true }
webpki-roots = { version = "0.26.8", optional = true }
rinf = { version = "8.0.0", optional = true }
log = { version = "0.4.27", optional = true }

[workspace]
members = ["make_bebop", "test_server", "test_client"]

[features]
default = []
debug = ["dep:log"]
rustls = ["dep:rustls", "tokio-tungstenite/__rustls-tls", "dep:webpki-roots"]
rinf = ["dep:rinf"]
