[package]
name = "atomic_websocket"
version = "0.7.0"
authors = ["hsng95@gmail.com"]
description = "High level Websocket util library from tokio-tungstenite"
homepage = "https://github.com/rabbitson87/atomic_websocket"
repository = "https://github.com/rabbitson87/atomic_websocket"
keywords = ["websocket", "client", "server"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.77"

[dependencies]
tokio = { version = "1.49.0", default-features = false, features = [
    "sync",
    "macros",
    "time",
    "rt-multi-thread",
] }
async-trait = "0.1.89"
native_db = { version = "0.8.2", optional = true }
native_model = { version = "0.4.20", optional = true }
tokio-tungstenite = "0.28.0"
nanoid = "0.4.0"
futures-util = "0.3.31"
thiserror = "2.0.17"

bebop = { version = "3.2.3", optional = true }
dashmap = "6.1"
chrono = { version = "0.4.43", default-features = false, features = ["clock"] }
serde = { version = "1.0.228", features = ["derive"] }

rustls = { version = "0.23.36", features = [
    "ring",
], default-features = false, optional = true }
webpki-roots = { version = "1.0.5", optional = true }
rinf = { version = "8.8.1", optional = true }
log = { version = "0.4.29", optional = true }

[workspace]
members = ["make_bebop", "test_server", "test_client"]

[features]
default = ["native-db", "bebop"]
native-db = ["dep:native_db", "dep:native_model"]
bebop = ["dep:bebop"]
debug = ["dep:log"]
rustls = ["dep:rustls", "tokio-tungstenite/__rustls-tls", "dep:webpki-roots"]
rinf = ["dep:rinf"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"
