[package]
name = "test_client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", default-features = false, features = ["fs"] }
atomic_websocket = { path = "../", features = ["debug"] }
log = "0.4.22"
log4rs = "1.3.0"
serde_yaml = "0.9.33"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
