[package]
name = "test_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", default-features = false, features = ["fs"] }
atomic_websocket = { path = "../", features = ["debug"] }
log = "0.4.25"
log4rs = "1.3.0"
serde_yaml = "0.9.33"
bebop = "3.1.3"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
